delete button works properly. fixed date()

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,4 +1,7 @@
-background {
-    background-image: url(../login/Food-Collage.jpg);
+.login {
+    background-image: url(../login/Maze-Maker_1.jpg);
     background-color: #cccccc;
+    width: 100vw;
+    height: 100vh;
+    background-repeat: round;
  }
