--- a/src/components/establishment/establishmentCard.css
+++ b/src/components/establishment/establishmentCard.css
@@ -1,36 +1,35 @@
-/* card{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-} */
+
 .cards{
     background-color: #fcca46;
-    /* width: 45%; */
     margin: none;
     Padding:1.5em;
+
 }
 
 .establishmentCardInfoCSS{
     background-color: #fcca46;
     color: whitesmoke;
+    text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4)
 }
+
 
 .card-body {
 
     float: right;
     background-color: #a1c181;
-    /* width: 45%; */
-    width: 100%
-
+    width: 100%;
+    border: solid;
+    border-radius: 10px;
 }
 
 .messageForm {
-    /* width: 45%; */
     background-color: #a1c181;
     display:flex;
     flex-direction: column;
-    /* width: 45%; */
     justify-content: center;
+    position: fixed;
+    bottom: 0;
+    width:50%
 }
 
 #addMessage{
@@ -43,18 +42,20 @@
 .form-group {
     display: flex;
     justify-content: center;
+
+
 }
 
 .bloop{
     color: whitesmoke;
     width:50%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
-
-
-
-
+    overflow-y: scroll;
+    width: 50vw;
+    height: 67.3vh;
+    text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4)
 }
 
 .bleep {
@@ -66,11 +67,21 @@
 }
 
 .messages {
-    /* width: 45%; */
+    min-width: 100%;
+    max-width: 100%;
+    background-color: #a1c181;
 }
 
 .section{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+}
+
+.card-link{
+    background: transparent;
+    border: transparent;
+    color: #2D7CF6;
+    cursor: pointer;
+    text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4)
 }
