--- a/src/components/vote/vote.css
+++ b/src/components/vote/vote.css
@@ -1,7 +1,52 @@
-/*
+.header{
+  display: flex;
+  justify-content: center;
+  background-color: #619b8a;
+  padding: .5em;
+  color: whitesmoke;
+  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4);
+}
+.FoodTop5 {
+  background-color: #619b8a;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width:28em;
+  height:28em;
+  padding-top: 2em;
+  padding-right: 2em;
+  padding-left: 2em;
+  margin: 2em;
+  border: #619b8a;
+  border-radius: 20px;
+box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4);
 
-.roundrect {
-  .up { border-radius: 2rem 2rem 0 0; }
-  .down { border-radius: 0 0 2rem 2rem; }
-  .count { border-radius: .5rem .5rem; }
-} */
+}
+
+.backgroundList{
+
+  background-color: #619b8a;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 25em;
+
+}
+
+.listItem{
+  padding:1em;
+  color: whitesmoke;
+  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4);
+}
+
+.liPoints{
+  padding-right: 2em;
+  color: whitesmoke;
+  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4);
+}
+
+.liName{
+  color: whitesmoke;
+  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4);
+  font-size: 1.2em;
+}
